fix value attributes

--- a/src/rent.html
+++ b/src/rent.html
@@ -41,7 +41,7 @@
           class="collapse navbar-collapse justify-content-start"
         >
           <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link">Home</a>
+            <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="rent.html" class="nav-item nav-link">Rent</a>
             <a href="#" class="nav-item nav-link">About Us</a>
             <a href="#" class="nav-item nav-link">Contact</a>
@@ -156,23 +156,23 @@
                 <label class="mr-sm-2" for="typeSelect">Type</label>
                 <select class="custom-select mr-sm-2" id="typeSelect">
                   <option selected>Choose...</option>
-                  <option value="1">Economy</option>
-                  <option value="2">Standard</option>
-                  <option value="3">Business</option>
+                  <option value="Economy">Economy</option>
+                  <option value="Standard">Standard</option>
+                  <option value="Business">Business</option>
                 </select>
               </div>
               <div class="form-group col-6">
                 <label class="mr-sm-2" for="brandSelect">Brand</label>
                 <select class="custom-select mr-sm-2" id="brandSelect">
                   <option selected>Choose...</option>
-                  <option value="1">Mercedes</option>
-                  <option value="2">Nissan</option>
-                  <option value="3">Toyota</option>
-                  <option value="4">Fiat</option>
-                  <option value="5">Volkswagen</option>
-                  <option value="6">Opel</option>
-                  <option value="7">Lexus</option>
-                  <option value="8">Audi</option>
+                  <option value="Mercedes">Mercedes</option>
+                  <option value="Nissan">Nissan</option>
+                  <option value="Toyota">Toyota</option>
+                  <option value="Fiat">Fiat</option>
+                  <option value="Volkswagen">Volkswagen</option>
+                  <option value="Opel">Opel</option>
+                  <option value="Lexus">Lexus</option>
+                  <option value="Audi">Audi</option>
                 </select>
               </div>
             </div>
@@ -181,20 +181,20 @@
                 <label class="mr-sm-2" for="fuelSelect">Fuel</label>
                 <select class="custom-select mr-sm-2" id="fuelSelect">
                   <option selected>Choose...</option>
-                  <option value="1">Gasoline</option>
-                  <option value="2">Gas</option>
-                  <option value="3">Diesel</option>
+                  <option value="Gasoline">Gasoline</option>
+                  <option value="Gas">Gas</option>
+                  <option value="Diesel">Diesel</option>
                 </select>
               </div>
               <div class="form-group col-6">
                 <label class="mr-sm-2" for="powerSelect">Power</label>
                 <select class="custom-select mr-sm-2" id="powerSelect">
                   <option selected>Choose...</option>
-                  <option value="1">1.4</option>
-                  <option value="2">1.6</option>
-                  <option value="3">1.8</option>
-                  <option value="4">2</option>
-                  <option value="5">2.2</option>
+                  <option value="1.4">1.4</option>
+                  <option value="1.6">1.6</option>
+                  <option value="1.8">1.8</option>
+                  <option value="2">2</option>
+                  <option value="2.2">2.2</option>
                 </select>
               </div>
             </div>
@@ -203,10 +203,10 @@
                 <label class="mr-sm-2" for="colorSelect">Color</label>
                 <select class="custom-select mr-sm-2" id="colorSelect">
                   <option selected>Choose...</option>
-                  <option value="1">Grey</option>
-                  <option value="2">Blue</option>
-                  <option value="3">White</option>
-                  <option value="4">Red</option>
+                  <option value="Grey">Grey</option>
+                  <option value="Blue">Blue</option>
+                  <option value="White">White</option>
+                  <option value="Red">Red</option>
                 </select>
               </div>
               <div class="form-group col-md-3 col-6">
@@ -249,8 +249,8 @@
                 <label class="mr-sm-2" for="seatsSelect">Seats</label>
                 <select class="custom-select mr-sm-2" id="seatsSelect">
                   <option selected>Choose...</option>
-                  <option value="1">4</option>
-                  <option value="2">5</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
                 </select>
               </div>
               <div class="form-group col-6">
@@ -268,9 +268,9 @@
                 <label class="mr-sm-2" for="doorsSelect">Doors</label>
                 <select class="custom-select mr-sm-2" id="doorsSelect">
                   <option selected>Choose...</option>
-                  <option value="1">3</option>
-                  <option value="2">4</option>
-                  <option value="3">5</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
                 </select>
               </div>
             </div>
@@ -394,7 +394,7 @@
 
             <ul class="list-unstyled">
               <li>
-                <a href="#!">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li>
                 <a href="rent.html">Rent</a>
