Connect filters to bakend

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 >Login</a
               >
               <div class="dropdown-menu action-form">
-                <form name="login">
+                <form id="login-form" name="login">
                   <div class="form-group">
                     <input
                       name="email"
@@ -91,7 +91,7 @@
                 >Sign up</a
               >
               <div class="dropdown-menu action-form">
-                <form name="signup">
+                <form id="signup-form" name="signup">
                   <p class="hint-text"
                     >Fill in this form to create your account!</p
                   >
@@ -523,6 +523,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./firebase.js"></script>
+    <script src="./auth.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
