--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,9 @@
             <div class="spacer"></div>
           </h1>
           <h3 class="hero-subtitle">RENT YOUR CAR NOW</h3>
-          <a href="#"><button class="mt-5 mb-5 button-primary">Rent</button></a>
+          <a href="rent.html"
+            ><button class="mt-5 mb-5 button-primary">Rent</button></a
+          >
         </div>
         <div class="img-container text-center">
           <img class="hero-img" src="./img/hero car white 1.png" alt="car" />
@@ -213,7 +215,7 @@
                   <p class="mt-4 card-text"
                     >lorem ipsum lorem ipsum lorem ipsum</p
                   >
-                  <h2 class="mt-4 card-tariff">From 10$</h2>
+                  <h2 class="mt-4 card-tariff">From 90 PLN</h2>
                 </div>
               </a>
             </div>
@@ -231,7 +233,7 @@
                   <p class="mt-4 card-text"
                     >lorem ipsum lorem ipsum lorem ipsum</p
                   >
-                  <h2 class="mt-4 card-tariff">From 10$</h2>
+                  <h2 class="mt-4 card-tariff">From 180 PLN</h2>
                 </div>
               </a>
             </div>
@@ -249,7 +251,7 @@
                   <p class="mt-4 card-text"
                     >lorem ipsum lorem ipsum lorem ipsum</p
                   >
-                  <h2 class="mt-4 card-tariff">From 10$</h2>
+                  <h2 class="mt-4 card-tariff">From 260 PLN$</h2>
                 </div>
               </a>
             </div>
