changed homepage images

--- a/src/index.html
+++ b/src/index.html
@@ -205,8 +205,8 @@
                   <div class="img-container">
                     <img
                       class="card-image"
-                      src="./img/hero car white 1.png"
-                      alt=""
+                      src="./img/polo.png"
+                      alt="polo car"
                     />
                   </div>
                   <h4 class="mt-5 card-title">Economy</h4>
@@ -223,7 +223,7 @@
                   <div class="img-container">
                     <img
                       class="card-image"
-                      src="./img/hero car white 1.png"
+                      src="./img/nissan.png"
                       alt=""
                     />
                   </div>
@@ -241,7 +241,7 @@
                   <div class="img-container">
                     <img
                       class="card-image"
-                      src="./img/hero car white 1.png"
+                      src="./img/lexus.png"
                       alt=""
                     />
                   </div>
