--- a/src/rent.html
+++ b/src/rent.html
@@ -314,7 +314,7 @@
                   <p class="car-price mt-3">90,11$</p>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="button-primary mt-3">Rent</button>
+                  <button type="button" data-toggle="modal" data-target="#rent-popup" class="button-primary mt-3">Rent</button>
                 </div>
               </div>
             </div>
@@ -333,7 +333,7 @@
                   <p class="car-price mt-3">90,11$</p>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="button-primary mt-3">Rent</button>
+                  <button type="button" data-toggle="modal" data-target="#rent-popup" class="button-primary mt-3">Rent</button>
                 </div>
               </div>
             </div>
@@ -352,13 +352,42 @@
                   <p class="car-price mt-3">90,11$</p>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="button-primary mt-3">Rent</button>
+                  <button type="button" data-toggle="modal" data-target="#rent-popup" class="button-primary mt-3">Rent</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <div class="modal fade" id="rent-popup" tabindex="-1" role="dialog" aria-labelledby="rent-popup" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Rent a car</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="form-row mt-3">
+                <div class="form-group col-md-6">
+                  <label class="control-label popup-label pr-4" for="rentDate">Rent Date</label>
+                  <input type="date" id="rentDate" name="rentDate" value="2018-07-22" min="2020-11-01" max="2029-12-31">
+                </div>
+                <div class="form-group col-md-6">
+                  <label class="control-label popup-label pr-4" for="returnDate">Return Date</label>
+                  <input type="date" id="returnDate" name="returnDate" value="2018-07-22" min="2020-11-01" max="2029-12-31">
+                </div>
+              </div>
+              <div class="text-center">
+                <button type="button" class="button-primary popup-btn mt-3 mb-3 mr-3" data-dismiss="modal">Close</button>
+                <button type="button" class="button-primary popup-btn mt-3 mb-3">Submit</button>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Footer -->
