--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a href="#" class="navbar-brand">Car<b>RENTAL</b></a>
+        <a href="index.html" class="navbar-brand">Car<b>RENTAL</b></a>
         <button
           type="button"
           class="navbar-toggler"
@@ -76,9 +76,9 @@
                     value="Login"
                   />
 
-                  <div class="text-center mt-2">
+                  <!-- <div class="text-center mt-2">
                     <a href="#">Forgot Your password?</a>
-                  </div>
+                  </div> -->
                 </form>
                 <p name="login" class="paragraph"></p>
               </div>
@@ -223,11 +223,7 @@
               <a href="rent.html?type=standard">
                 <div class="price-card text-center">
                   <div class="img-container">
-                    <img
-                      class="card-image"
-                      src="./img/nissan.png"
-                      alt=""
-                    />
+                    <img class="card-image" src="./img/nissan.png" alt="" />
                   </div>
                   <h4 class="mt-5 card-title">Standard</h4>
                   <p class="mt-4 card-text"
@@ -241,11 +237,7 @@
               <a href="rent.html?type=business">
                 <div class="price-card text-center">
                   <div class="img-container">
-                    <img
-                      class="card-image"
-                      src="./img/lexus.png"
-                      alt=""
-                    />
+                    <img class="card-image" src="./img/lexus.png" alt="" />
                   </div>
                   <h4 class="mt-5 card-title">Business</h4>
                   <p class="mt-4 card-text"
@@ -494,7 +486,7 @@
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3"
         >© 2020 Copyright:
-        <a href="#"> CarRENTAL</a>
+        <a href="index.html"> CarRENTAL</a>
       </div>
       <!-- Copyright -->
     </footer>
