--- a/src/rent.html
+++ b/src/rent.html
@@ -253,12 +253,12 @@
 
                 <div class="form-group col-md-6">
                   <label class="control-label popup-label pr-4" for="rentDate">Rent Date</label>
-                  <input type="date" id="rentDate" name="rentDate" value="2018-07-22" min="2020-11-01" max="2029-12-31">
+                  <input type="date" id="rentDate" name="rentDate">
                 </div>
 
                 <div class="form-group col-md-6">
                   <label class="control-label popup-label pr-4" for="returnDate">Return Date</label>
-                  <input type="date" id="returnDate" name="returnDate" value="2018-07-22" min="2020-11-01" max="2029-12-31">
+                  <input type="date" id="returnDate" name="returnDate">
                 </div>
 
               </div>
